--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.chrisvest</groupId>
   <artifactId>objectpoolbenchmarks</artifactId>
-  <version>2.2-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>objectpoolbenchmarks</name>
   <description>Benchmarks code for various object pool libraries.</description>
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>com.github.chrisvest</groupId>
       <artifactId>stormpot</artifactId>
-      <version>${project.version}</version>
+      <version>2.1</version>
     </dependency>
     <dependency>
       <groupId>commons-pool</groupId>
