--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>objectpool</artifactId>
       <version>1.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.vibur</groupId>
+      <artifactId>vibur-object-pool</artifactId>
+      <version>1.0.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
