--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-core</artifactId>
-      <version>0.4.2</version>
+      <version>0.5.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>0.5.4</version>
     </dependency>
     <dependency>
       <groupId>org.openjdk.jol</groupId>
@@ -73,7 +78,7 @@
               <finalName>object-pool-benchmarks</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>objectpoolbenchmark.suite.FullSuite</mainClass>
+                  <mainClass>org.openjdk.jmh.Main</mainClass>
                 </transformer>
               </transformers>
             </configuration>
