--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
       <artifactId>jol-core</artifactId>
       <version>LATEST</version>
     </dependency>
-      <dependency>
-          <groupId>com.zaxxer</groupId>
-          <artifactId>HikariCP</artifactId>
-          <version>1.3.5</version>
-          <scope>compile</scope>
-      </dependency>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>1.3.5</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -133,7 +133,7 @@
   <properties>
     <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jmh.version>LATEST</jmh.version>
+    <jmh.version>0.5.6</jmh.version>
   </properties>
 </project>
 
