--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,17 @@
   <description>Benchmarks code for various object pool libraries.</description>
   <inceptionYear>2014</inceptionYear>
 
+  <properties>
+    <java.version>1.7</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jmh.version>1.4.1</jmh.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.github.chrisvest</groupId>
       <artifactId>stormpot</artifactId>
-      <version>2.2</version>
+      <version>2.4-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-pool</groupId>
@@ -57,6 +63,11 @@
       <artifactId>HikariCP</artifactId>
       <version>1.3.5</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
     </dependency>
   </dependencies>
 
@@ -129,10 +140,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <properties>
-    <java.version>1.7</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jmh.version>1.0</jmh.version>
-  </properties>
 </project>
